export const MAIN_SCREEN = 'mainScreen';
export const EDIT_SCREEN = 'editScreen';
export const KEYBOARD_VIEW = 'keyboardView';
export const TITLE = 'Quick Replies';
export const SELECT_REPLY = 'selectReply';
export const SAVE_CHANGES = 'saveChanges';
export const EDIT_BUTTON = 'editButton';
export const DEFAULT_LIBRARY = [
    {
      id: 0,
      title: 'Greeting',
      description: 'Hi there, I\'m here to chat if you have any questions.'
    },
    {
      id: 1,
      title: 'Bye',
      description: 'Thank you for dropping by.'
    },
    {
      id: 2,
      title: 'Getting leads',
      description: 'We have 30% sale this week, leave me your email and I\'ll get back to you with the details.'
    }
  ];

