...
          <TextInput
            maxHeight={200}
            style={styles.textInput}
            ref={(r) => {
              this.textInputRef = r;
            }}
            placeholder={'Message'}
            onFocus={() => this.resetKeyboardView()}
          />
          <Icon
          name='send'
          onPress={this.sendMessage}
          />
...
